# ClawBase44.ai.Bots

./: .env.example  .gitignore  PROMPT_11_LANGUAGE_LIBRARY.md  PROMPT_11_STACK_PROFILE.md  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: base44-integration.yml  ci.yml  grok-integration.yml  integration-dispatch.yml  openai-integration.yml  replit-integration.yml  repository-sync.yml  web3-integration.yml
config/: __init__.py  integrations.example.json  settings.py
src/: __init__.py  cli.py  index.js
src/core/: __init__.py  base_bot.py  scheduler.py  workflow.py
src/integrations/: __init__.py  base44.js  chatgpt.py  github.js  grok.js  grok.py  manychat.py  openai.js  replit.js  web3.js  web3_adapter.py  webhook.js
src/workflows/: __init__.py  affiliate.py  content_gen.py  social_media.py
tests/: test_affiliate.py  test_base_bot.py  test_settings.py  test_workflow.py
